--- a/dotNet5782_8995_8035/PL/MainWindow.xaml
+++ b/dotNet5782_8995_8035/PL/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    
+
     <Grid Name="UpGrid" HorizontalAlignment="Stretch" Height="auto" Grid.Row="0" VerticalAlignment="Stretch" Width="auto">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -14,5 +14,6 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions >
+        <Button Content="Button" Grid.Column="1" HorizontalAlignment="Center" Margin="0,144,0,0" VerticalAlignment="Top" Height="48" Width="96" Click="Button_Click"/>
     </Grid>
 </Window>
