--- a/dotNet5782_8995_8035/PL/ListOfDronesViewWindow.xaml
+++ b/dotNet5782_8995_8035/PL/ListOfDronesViewWindow.xaml
@@ -1,19 +1,29 @@
-﻿<Window x:Class="PL.ListOfDronesViewWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
+        xmlns:BO="clr-namespace:IBAL.BO;assembly=BL" x:Class="PL.ListOfDronesViewWindow"
         mc:Ignorable="d"
         Title="ListOfDronesViewWindow" Height="640" Width="800">
-    <Grid Name="MainGrid">
+    <Grid x:Name="MainGrid">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="50*"/>
             <RowDefinition Height="400*"/>
         </Grid.RowDefinitions>
-        <ComboBox Name="StatusSelector" HorizontalAlignment="Stretch" Margin="182,58,0,0" Grid.Row="1" Grid.Column="1" VerticalAlignment="Stretch" Width="120" Height="34"/>
-        <ComboBox Name="WeightSelecter"  HorizontalAlignment="Stretch" Margin="459,58,0,0" Grid.Row="1" Grid.Column="1" VerticalAlignment="Stretch" Width="120" Height="34"/>
-        <TextBox Name="TBD" HorizontalAlignment="Left" Margin="120,104,0,0" Grid.Row="1" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="170" Height="27">
+
+        <ComboBox x:Name="StatusSelector" Margin="40,19,40,16" Grid.Column="2" Width="120" Height="34" SelectionChanged ="StatusChoose"/>
+
+        <ComboBox x:Name="WeightSelecter" Margin="40,18,40,17" Grid.Column="3" Width="120" Height="34" SelectionChanged ="WeightChoose"/>
+
+        <TextBox x:Name="TBD" HorizontalAlignment="Left" Margin="10,0,0,0" Text="choose element" TextWrapping="Wrap" VerticalAlignment="Center" Width="170" Height="27">
             <TextBox.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -23,13 +33,12 @@
                 </TransformGroup>
             </TextBox.RenderTransform>
         </TextBox>
-        <ListView x:Name="ListOfDronesView" Grid.Row="1" Margin="94,243,445,158">
+        <ListView x:Name="ListOfDronesView" Grid.Row="1" Margin="10,10,10,10" RenderTransformOrigin="0.831,0.089" Grid.ColumnSpan="4" >
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
                 </GridView>
             </ListView.View>
         </ListView>
-
     </Grid>
 </Window>
