--- a/dotNet5782_8995_8035/PL/AddDroneWindow.xaml
+++ b/dotNet5782_8995_8035/PL/AddDroneWindow.xaml
@@ -34,6 +34,7 @@
         <!--<ComboBox Name="BaseStation" Grid.Column="2" HorizontalAlignment="Center" Margin="0,15,0,0" Grid.Row="4" VerticalAlignment="Top" Width="120"/>-->
 
         <Button Content="Add New Drone" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" Height="62" Width="400" Grid.ColumnSpan="2" Click="Button_Click"/>
-       
+        <Button Content="Cancel" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="180" Click="Button_Click_1"/>
+
     </Grid>
 </Window>
