--- a/dotNet5782_8995_8035/PL/DroneWindow.xaml
+++ b/dotNet5782_8995_8035/PL/DroneWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="PL.AddDroneWindow"
+﻿<Window x:Class="PL.DroneWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="AddDroneWindow" Height="450" Width="800">
-    <Grid Height="434" VerticalAlignment="Center">
+        Title="DroneWindow" Height="450" Width="800">
+    <Grid x:Name="AddingGrid" Height="434" VerticalAlignment="Center">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
@@ -23,7 +23,7 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Label Content= "Drone ID" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" Margin="0,11,0,0" VerticalAlignment="Top" Width="108" Height="29"/>
+        <Label Content="Drone ID" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" Margin="0,11,0,0" VerticalAlignment="Top" Width="108" Height="29"/>
         <Label Content="Model" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="2" Margin="0,11,0,0" VerticalAlignment="Top" Width="108" Height="29"/>
         <Label Content="weight Category" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="3" Margin="0,11,0,0" VerticalAlignment="Top" Width="108" Height="29"/>
         <!--<Label Content="base station" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="4" Margin="0,11,0,0" VerticalAlignment="Top" Width="108" Height="29"/>-->
@@ -36,5 +36,10 @@
         <Button Content="Add New Drone" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" Height="62" Width="400" Grid.ColumnSpan="2" Click="Button_Click"/>
         <Button Content="Cancel" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="180" Click="Button_Click_1"/>
 
+        <Label Content="Adding A Drone" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" Height="42" Width="380" RenderTransformOrigin="0.5,0.5" FontWeight="Bold" FontSize="20" AllowDrop="True" FontFamily="Arial Black" FontStyle="Normal"/>
+
+
+
     </Grid>
+
 </Window>
