butons in dronewindow

--- a/dotNet5782_8995_8035/PL/DroneWindow.xaml
+++ b/dotNet5782_8995_8035/PL/DroneWindow.xaml
@@ -23,20 +23,32 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Label Content="Drone ID" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" Margin="0,11,0,0" VerticalAlignment="Top" Width="108" Height="29"/>
-        <Label Content="Model" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="2" Margin="0,11,0,0" VerticalAlignment="Top" Width="108" Height="29"/>
-        <Label Content="weight Category" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="3" Margin="0,11,0,0" VerticalAlignment="Top" Width="108" Height="29"/>
+        <Label Content="Drone ID" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Width="108" Height="29"/>
+        <Label Content="Model" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Top" Width="108" Height="29" Grid.ColumnSpan="2" Margin="146,0,0,0"/>
+        <Label Content="weight Category" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Width="108" Height="29"/>
         <!--<Label Content="base station" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="4" Margin="0,11,0,0" VerticalAlignment="Top" Width="108" Height="29"/>-->
+        <Label Name="WindowTitle" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" Height="42" Width="380" RenderTransformOrigin="0.5,0.5" FontWeight="Bold" FontSize="30" AllowDrop="True" FontFamily="Arial Black" FontStyle="Normal"/>
 
-        <TextBox Name="droneId" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="1" Text="Id" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" FontWeight="Bold" TextChanged="TextChanged"  />
-        <TextBox Name="model" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="2" Text="model" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" FontWeight="Bold"/>
-        <ComboBox Name="Weight" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="3" Text="weight category" VerticalAlignment="Center" Width="120" Background="Black" />
+
+        <TextBox Name="DroneID" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" Text="Id" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" FontWeight="Bold" TextChanged="TextChanged" Margin="0,29,0,0" Height="23"  />
+        <TextBox Name="Model" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="2" Text="model" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" FontWeight="Bold" RenderTransformOrigin="0.596,0.084" Margin="110,31,0,0" Height="23" Grid.ColumnSpan="2"/>
+        <ComboBox Name="Weight" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="1" Text="weight category" VerticalAlignment="Top" Width="180" Background="Black" Margin="0,30,0,0" />
         <!--<ComboBox Name="BaseStation" Grid.Column="2" HorizontalAlignment="Center" Margin="0,15,0,0" Grid.Row="4" VerticalAlignment="Top" Width="120"/>-->
 
-        <Button Content="Add New Drone" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" Height="62" Width="400" Grid.ColumnSpan="2" Click="Button_Click"/>
-        <Button Content="Cancel" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="180" Click="Button_Click_1"/>
+        <Button Name="AddingButton" Content="Add New Drone" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" Height="62" Width="400" Grid.ColumnSpan="2" Click="Button_Click"/>
+        <Button Content="X" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="45" Click="Button_Click_1" Grid.Column="3" Background="#FFF90B0B" FontWeight="Bold" FontSize="24"/>
 
-        <Label Content="Adding A Drone" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" Height="42" Width="380" RenderTransformOrigin="0.5,0.5" FontWeight="Bold" FontSize="20" AllowDrop="True" FontFamily="Arial Black" FontStyle="Normal"/>
+
+        <Label Name="BatteryText" Content="Battery" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" RenderTransformOrigin="0.22,-0.281" Height="31" Width="108"/>
+        <Label Name="BatteryLabel" Content="Label" Grid.Column="1" HorizontalAlignment="Center" Margin="0,36,0,0" Grid.Row="3" VerticalAlignment="Top" Width="180" Background="#FFD1D1D1"/>
+        <Label Name="StatusText" Content="Status" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" Width="108"/>
+        <Label Name="StatusLabel" Content="Label" Grid.Column="2" HorizontalAlignment="Center" Margin="0,36,0,0" Grid.Row="3" VerticalAlignment="Top" Background="#FFD1D1D1" RenderTransformOrigin="0.57,0.52" Width="180"/>
+        <Label Name="ParcelText" Content="parcelId" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Top" RenderTransformOrigin="0.22,-0.281" Height="31" Width="108" Grid.ColumnSpan="2" Margin="146,0,0,0"/>
+        <Label Name="ParcelLabel" Content="Label" Grid.Column="1" HorizontalAlignment="Left" Margin="110,36,0,0" Grid.Row="4" VerticalAlignment="Top" Width="180" Background="#FFD1D1D1" Grid.ColumnSpan="2"/>
+        <Label Name="LocationText" Content="Location" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Top" Grid.ColumnSpan="2" Width="132"/>
+        <Label Name="LongtudeText" Content="Label" Grid.Column="1" HorizontalAlignment="Center" Margin="0,31,0,0" Grid.Row="5" VerticalAlignment="Top" Width="180" Background="#FFD1D1D1"/>
+        <Label Name="LattitudeText" Content="Label" Grid.Column="2" HorizontalAlignment="Center" Margin="0,31,0,0" Grid.Row="5" VerticalAlignment="Top" Background="#FFD1D1D1" RenderTransformOrigin="0.024,-0.193" Width="180"/>
+
 
 
 
