--- a/dotNet5782_8995_8035/PL/ListOfDronesViewWindow.xaml
+++ b/dotNet5782_8995_8035/PL/ListOfDronesViewWindow.xaml
@@ -19,9 +19,9 @@
             <RowDefinition Height="400*"/>
         </Grid.RowDefinitions>
 
-        <ComboBox x:Name="StatusSelector" Margin="40,19,40,16" Grid.Column="2" Width="120" Height="34" SelectionChanged ="StatusChoose"/>
+        <ComboBox x:Name="StatusSelector" Margin="27,29,27,0" Grid.Column="2" SelectedIndex="3" SelectionChanged ="StatusChoose" FontSize="15" FontWeight="Normal"/>
 
-        <ComboBox x:Name="WeightSelecter" Margin="40,19,40,16" Grid.Column="3" Width="120" Height="34" SelectionChanged ="WeightChoose"/>
+        <ComboBox x:Name="WeightSelecter" Margin="27,29,27,0" Grid.Column="3" SelectedIndex="3" SelectionChanged ="WeightChoose" FontSize="15" FontWeight="Normal"/>
 
         <TextBox x:Name="TBD" HorizontalAlignment="Left" Margin="10,0,0,0" Text="choose element" TextWrapping="Wrap" VerticalAlignment="Center" Width="170" Height="27">
             <TextBox.RenderTransform>
@@ -41,5 +41,7 @@
             </ListView.View>
         </ListView>
         <Button Content="add drone" Grid.Column="1" Margin="40,19,0,16" Click="Button_Click" HorizontalAlignment="Left" Width="120"  />
+        <Label Content="Status selector" Grid.Column="2" HorizontalAlignment="Center" Margin="0,5,0,0" VerticalAlignment="Top" Width="144" Height="24" FontWeight="Bold"/>
+        <Label Content="weight selector" Grid.Column="3" HorizontalAlignment="Center" Margin="0,5,0,0" VerticalAlignment="Top" Width="144" Height="24" FontWeight="Bold"/>
     </Grid>
 </Window>
