--- a/dotNet5782_8995_8035/PL/ListOfDronesViewWindow.xaml
+++ b/dotNet5782_8995_8035/PL/ListOfDronesViewWindow.xaml
@@ -1,4 +1,5 @@
 ﻿<Window
+           
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,12 +7,19 @@
         xmlns:local="clr-namespace:PL"
         xmlns:BO="clr-namespace:IBAL.BO;assembly=BL" x:Class="PL.ListOfDronesViewWindow"
         mc:Ignorable="d"
-        Title="ListOfDronesViewWindow" Height="640" Width="800">
+        Title="ListOfDronesViewWindow" Height="543" Width="800" Loaded="Loded">
+
+    <Window.Background>
+        <ImageBrush ImageSource = "/images/1.jpg" Stretch="UniformToFill"/>
+    </Window.Background>
+
+
     <Grid x:Name="MainGrid">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="25*"/>
+            <ColumnDefinition Width="25*"/>
+            <ColumnDefinition Width="25*"/>
+            <ColumnDefinition Width="24*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -19,29 +27,20 @@
             <RowDefinition Height="400*"/>
         </Grid.RowDefinitions>
 
-        <ComboBox x:Name="StatusSelector" Margin="27,29,27,0" Grid.Column="2" SelectedIndex="3" SelectionChanged ="StatusChoose" FontSize="15" FontWeight="Normal"/>
+        <ComboBox x:Name="StatusSelector" Margin="27,24,27,5" Grid.Column="1" SelectedIndex="3" SelectionChanged ="StatusChoose" FontSize="15" FontWeight="Normal" Background="{x:Null}"/>
 
-        <ComboBox x:Name="WeightSelecter" Margin="27,29,27,0" Grid.Column="3" SelectedIndex="3" SelectionChanged ="WeightChoose" FontSize="15" FontWeight="Normal"/>
-
-        <TextBox x:Name="TBD" HorizontalAlignment="Left" Margin="10,0,0,0" Text="choose element" TextWrapping="Wrap" VerticalAlignment="Center" Width="170" Height="27">
-            <TextBox.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="-0.941"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </TextBox.RenderTransform>
-        </TextBox>
-        <ListView x:Name="ListOfDronesView" Grid.Row="1" Margin="10,10,10,10" RenderTransformOrigin="0.831,0.089" Grid.ColumnSpan="4" MouseDoubleClick="ClickedItem" >
+        <ComboBox x:Name="WeightSelecter" Margin="27,24,27,5" Grid.Column="2" SelectedIndex="3" SelectionChanged ="WeightChoose" FontSize="15" FontWeight="Normal" Background="{x:Null}"/>
+        <ListView x:Name="ListOfDronesView" Grid.Row="1" Margin="10,10,2,10" RenderTransformOrigin="0.831,0.089" Grid.ColumnSpan="4" MouseDoubleClick="ClickedItem" Background="{x:Null}" Foreground="#FF610101" FontWeight="Bold" >
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button Content="add drone" Grid.Column="1" Margin="40,19,0,16" Click="Button_Click" HorizontalAlignment="Left" Width="120"  />
-        <Label Content="Status selector" Grid.Column="2" HorizontalAlignment="Center" Margin="0,5,0,0" VerticalAlignment="Top" Width="144" Height="24" FontWeight="Bold"/>
-        <Label Content="weight selector" Grid.Column="3" HorizontalAlignment="Center" Margin="0,5,0,0" VerticalAlignment="Top" Width="144" Height="24" FontWeight="Bold"/>
+        <Button Content="add drone" Margin="0,10,0,10" Click="Button_Click" HorizontalAlignment="Center" Width="180" Background="{x:Null}"  />
+        <Label Content="Status selector" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Width="144" Height="24" FontWeight="Bold"/>
+        <Label Content="weight selector" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Top" Width="144" Height="24" FontWeight="Bold"/>
+        <Button Content="X" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="-1.136,-0.1" Height="32" Width="28" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Grid.Column="3" Margin="172,0,0,0" Grid.ColumnSpan="2"/>
+
     </Grid>
 </Window>
