--- a/dotNet5782_8995_8035/PL/DroneWindow.xaml
+++ b/dotNet5782_8995_8035/PL/DroneWindow.xaml
@@ -1,14 +1,16 @@
-﻿<Window x:Class="PL.DroneWindow"
+﻿<Window
         
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="PL.DroneWindow"
+        
         mc:Ignorable="d"
         Title="DroneWindow" Height="450" Width="800" Loaded="Loded">
 
-    
+
 
     <Grid x:Name="AddingGrid" Height="434" VerticalAlignment="Center">
         <Grid.RowDefinitions>
@@ -30,39 +32,44 @@
         <Label Content="Drone ID" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Width="108" Height="29" FontWeight="Bold"/>
         <Label Content="Model" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Top" Width="108" Height="29" Grid.ColumnSpan="2" Margin="146,0,0,0" FontWeight="Bold"/>
         <Label Content="weight Category" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Width="108" Height="29" FontWeight="Bold"/>
-        <Label Name="WindowTitle" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="42" Width="278" RenderTransformOrigin="0.5,0.5" FontWeight="Bold" FontSize="24" AllowDrop="True" FontFamily="Ink Free" FontStyle="Normal" Margin="0,15,0,0" Background="#FFD1D1D1" Foreground="Blue"/>
+        <Label x:Name="WindowTitle" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="42" Width="278" RenderTransformOrigin="0.5,0.5" FontWeight="Bold" FontSize="24" AllowDrop="True" FontFamily="Ink Free" FontStyle="Normal" Margin="0,15,0,0" Background="#FFD1D1D1" Foreground="Blue"/>
 
 
-        <TextBox Name="DroneID" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" FontWeight="Bold" TextChanged="DroneIdTextChanged" Margin="0,29,0,0" Height="23" Background="#FFD1D1D1"  />
-        <TextBox Name="Model" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="2" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" FontWeight="Bold" RenderTransformOrigin="0.596,0.084" Margin="0,29,0,0" Height="23" TextChanged="ModelUpdatedButtonClick" Grid.ColumnSpan="2" Background="#FFD1D1D1"/>
-        <ComboBox Name="Weight" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="1" Text="" VerticalAlignment="Top" Width="180" Background="#FFD1D1D1" Margin="0,30,0,0" FontWeight="Bold" />
+        <TextBox x:Name="DroneID" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" FontWeight="Bold" TextChanged="DroneIdTextChanged" Margin="0,29,0,0" Height="23" Background="#FFD1D1D1"  />
+        <TextBox x:Name="Model" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="2" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" FontWeight="Bold" RenderTransformOrigin="0.596,0.084" Margin="0,29,0,0" Height="23" TextChanged="ModelUpdatedButtonClick" Grid.ColumnSpan="2" Background="#FFD1D1D1"/>
+        <ComboBox x:Name="Weight" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="1" Text="" VerticalAlignment="Top" Width="180" Background="#FFD1D1D1" Margin="0,30,0,0" FontWeight="Bold" />
 
-        <Button Name="AddingButton" Content="Add New Drone" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" Height="62" Width="400" Grid.ColumnSpan="2" Click="AddDroneButton" Background="#FFD1D1D1" FontWeight="Bold"/>
+        <Button x:Name="AddingButton" Content="Add New Drone" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" Height="62" Width="400" Grid.ColumnSpan="2" Click="AddDroneButton" Background="#FFD1D1D1" FontWeight="Bold"/>
         <Button Content="X" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="-1.136,-0.1" Height="32" Width="32" Click="XButton" Grid.Column="3" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Margin="168,10,0,0"/>
 
 
-        <Label Name="BatteryText" Content="Battery" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" RenderTransformOrigin="0.22,-0.281" Height="31" Width="108" FontWeight="Bold" />
-        <Label Name="BatteryLabel" Content="Label" Grid.Column="1" HorizontalAlignment="Center" Margin="0,36,0,0" Grid.Row="3" VerticalAlignment="Top" Width="180" Background="#FFD1D1D1" FontWeight="Bold"/>
-        <Label Name="StatusText" Content="Status" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" Width="108" FontWeight="Bold"/>
-        <Label Name="StatusLabel" Content="Label" Grid.Column="2" HorizontalAlignment="Center" Margin="0,36,0,0" Grid.Row="3" VerticalAlignment="Top" Background="#FFD1D1D1" RenderTransformOrigin="0.57,0.52" Width="180" FontWeight="Bold"/>
-        <Label Name="ParcelText" Content="parcelId" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Top" RenderTransformOrigin="0.22,-0.281" Height="31" Width="108" Grid.ColumnSpan="2" Margin="146,0,0,0" FontWeight="Bold"/>
-        <Label Name="ParcelLabel" Content="Label" Grid.Column="1" HorizontalAlignment="Left" Margin="110,36,0,0" Grid.Row="4" VerticalAlignment="Top" Width="180" Background="#FFD1D1D1" Grid.ColumnSpan="2" FontWeight="Bold"/>
-        <Label Name="LocationText" Content="Location" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Top" Grid.ColumnSpan="2" Width="132" FontWeight="Bold"/>
-        <Label Name="LongtudeText" Content="Label" Grid.Column="1" HorizontalAlignment="Center" Margin="0,31,0,0" Grid.Row="5" VerticalAlignment="Top" Width="180" FontWeight="Bold" Background="#FFD1D1D1"/>
-        <Label Name="LatitudeText" Content="Label" Grid.Column="2" HorizontalAlignment="Center" Margin="0,31,0,0" Grid.Row="5" VerticalAlignment="Top" RenderTransformOrigin="0.024,-0.193" Width="180" FontWeight="Bold" Background="#FFD1D1D1"/>
+        <Label x:Name="BatteryText" Content="Battery" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" RenderTransformOrigin="0.22,-0.281" Height="31" Width="108" FontWeight="Bold" />
+        <Label x:Name="BatteryLabel" Content="Label" Grid.Column="1" HorizontalAlignment="Center" Margin="0,36,0,0" Grid.Row="3" VerticalAlignment="Top" Width="180" Background="#FFD1D1D1" FontWeight="Bold"/>
+        <Label x:Name="StatusText" Content="Status" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" Width="108" FontWeight="Bold"/>
+        <Label x:Name="StatusLabel" Content="Label" Grid.Column="2" HorizontalAlignment="Center" Margin="0,36,0,0" Grid.Row="3" VerticalAlignment="Top" Background="#FFD1D1D1" RenderTransformOrigin="0.57,0.52" Width="180" FontWeight="Bold"/>
+        <Label x:Name="ParcelText" Content="parcelId" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Top" RenderTransformOrigin="0.22,-0.281" Height="31" Width="108" Grid.ColumnSpan="2" Margin="146,0,0,0" FontWeight="Bold"/>
+        <Label x:Name="ParcelLabel" Content="Label" Grid.Column="1" HorizontalAlignment="Left" Margin="110,36,0,0" Grid.Row="4" VerticalAlignment="Top" Width="180" Background="#FFD1D1D1" Grid.ColumnSpan="2" FontWeight="Bold"/>
+        <Label x:Name="LocationText" Content="Location" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Top" Grid.ColumnSpan="2" Width="132" FontWeight="Bold"/>
+        <Label x:Name="LongtudeText" Content="Label" Grid.Column="1" HorizontalAlignment="Center" Margin="0,31,0,0" Grid.Row="5" VerticalAlignment="Top" Width="180" FontWeight="Bold" Background="#FFD1D1D1"/>
+        <Label x:Name="LatitudeText" Content="Label" Grid.Column="2" HorizontalAlignment="Center" Margin="0,31,0,0" Grid.Row="5" VerticalAlignment="Top" RenderTransformOrigin="0.024,-0.193" Width="180" FontWeight="Bold" Background="#FFD1D1D1"/>
 
 
 
-        <Button Name="UpdateModel" Content="update model" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Height="42" Width="180" Click="UpdateModel_Click"  />
-        <Button Name="GoToCharge" Content="go to charge" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Center" Height="42" Width="180" Click="GoToCharge_Click"/>
-        <Button Name="ReliceDroneFromCharge" Content="Uncharge Drone" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Center" Height="42" Width="98" Click="ReliceDroneFromCharge_Click" Margin="10,0,0,0"/>
+        <Button x:Name="UpdateModel" Content="update model" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Height="42" Width="180" Click="UpdateModel_Click"  />
+        <Button x:Name="GoToCharge" Content="go to charge" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Center" Height="42" Width="180" Click="GoToCharge_Click"/>
+        <Button x:Name="ReliceDroneFromCharge" Content="Uncharge Drone" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Center" Height="42" Width="98" Click="ReliceDroneFromCharge_Click" Margin="10,0,0,0"/>
 
-        <TextBox Name="MinutesInput" HorizontalAlignment="Left" Margin="113,32,0,0" Grid.Row="4" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="82" TextChanged="MinutesInputChanged" FontSize="10" Height="20"/>
-        <Label Name="LabelMinutsInCharge" Content="Insert Minutes:" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Top" Height="22" Width="82" FontSize="8" Margin="113,7,0,0"/>
+        <TextBox x:Name="MinutesInput" HorizontalAlignment="Left" Margin="113,32,0,0" Grid.Row="4" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="82" TextChanged="MinutesInputChanged" FontSize="10" Height="20"/>
+        <Label x:Name="LabelMinutsInCharge" Content="Insert Minutes:" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Top" Height="22" Width="82" FontSize="8" Margin="113,7,0,0"/>
 
-        <Button Name="AssiningParcelToDrone" Content="Assining Parcel To Drone" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Height="42" Width="180" Click="AssiningParcelToDrone_Click" Grid.Column="3"/>
-        <Button Name="PickingUpAParcel" Content="Picking Up A Parcel" Grid.Column="3" HorizontalAlignment="Center" Margin="0,6,0,0" Grid.Row="3" VerticalAlignment="Top" Height="46" Width="180" Click="PickingUpAParcel_Click"/>
-        <Button Name="DliveringParcel" Content="Delivering Parcel" Grid.Column="3" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" RenderTransformOrigin="-1.666,-0.183" Height="41" Width="180" Click="DliveringParcel_Click"/>
+        <Button x:Name="AssiningParcelToDrone" Content="Assining Parcel To Drone" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Height="42" Width="180" Click="AssiningParcelToDrone_Click" Grid.Column="3"/>
+        <Button x:Name="PickingUpAParcel" Content="Picking Up A Parcel" Grid.Column="3" HorizontalAlignment="Center" Margin="0,6,0,0" Grid.Row="3" VerticalAlignment="Top" Height="46" Width="180" Click="PickingUpAParcel_Click"/>
+        <Button x:Name="DliveringParcel" Content="Delivering Parcel" Grid.Column="3" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" RenderTransformOrigin="-1.666,-0.183" Height="41" Width="180" Click="DliveringParcel_Click"/>
+
+
+
+
+        <materialDesign:Flipper/>
 
 
 
