--- a/dotNet5782_8995_8035/PL/App.xaml
+++ b/dotNet5782_8995_8035/PL/App.xaml
@@ -4,6 +4,6 @@
              xmlns:local="clr-namespace:PL"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <local:DoubleToInt x:Key="converters"/>
     </Application.Resources>
 </Application>
