--- a/dotNet5782_8995_8035/PL/App.xaml
+++ b/dotNet5782_8995_8035/PL/App.xaml
@@ -5,8 +5,8 @@
              StartupUri="MainWindow.xaml"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
     <Application.Resources>
-        <local:DoubleToInt x:Key="converters"/>
-        <ResourceDictionary x:Key="MeterialDesign">
+        <ResourceDictionary>
+            <local:DoubleToInt x:Key="converters"/>
             <ResourceDictionary.MergedDictionaries>
                 <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="DeepPurple" SecondaryColor="Lime" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
