--- a/dotNet5782_8995_8035/PL/MainWindow.xaml
+++ b/dotNet5782_8995_8035/PL/MainWindow.xaml
@@ -20,13 +20,10 @@
     </Window.Background>
 
     <Grid Name="UpGrid" HorizontalAlignment="Stretch" Height="auto" Grid.Row="0" VerticalAlignment="Stretch" Width="auto">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions >
-        <Button Name="start_button" Content="To Drone List" HorizontalAlignment="Left" Margin="154,189,0,0" VerticalAlignment="Top" Height="48" Width="96" Click="Button_Click" Grid.ColumnSpan="2" FontFamily="TopType Soncino" Background="{x:Null}"/>
-        <Label x:Name="Welcome" Content="Welcome" Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="81" Margin="111,84,0,0" VerticalAlignment="Top" Width="289" Foreground="#FF2C52A2" FontSize="48"/>
+        <Grid.Background>
+            <ImageBrush/>
+        </Grid.Background>
+        <Button Name="start_button" Content="To Drone List"  HorizontalAlignment="Left" Margin="154,189,0,0" VerticalAlignment="Top" Height="66" Width="176" Click="Button_Click" />
+        <Label x:Name="Welcome" Content="Welcome" Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="81" Margin="111,84,0,0" VerticalAlignment="Top" Width="289" Foreground="#FF2C52A2" FontSize="55" FontFamily="MV Boli"/>
     </Grid>
 </Window>
